# aichan

./: .cursorignore  .env.example  .gitignore  .prompt.example.yml  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.cursor/rules/: coding.mdc  overview.mdc
.github/: .gitmessage
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_request.yml  feature_request.yml
.github/workflows/: codeql.yml
docs/: CONTRIBUTING.md  DEVELOPERS.md  PREREQUISITES.md
src/aichan/: __main__.py  _cli.py
src/aichan/adapters/: chat.py  response.py
src/aichan/ai/models/: _base.py  claude_model.py  gpt_model.py
src/aichan/ai/services/: anthropic_text.py  openai_text.py
src/aichan/config/: env.py  prompt.py  timezone.py
src/aichan/database/: _dao_base.py
src/aichan/database/dao/: access_dao.py  channel_dao.py  limit_dao.py
src/aichan/discord/: client.py  event.py
src/aichan/discord/commands/: __init__.py  access_commands.py  channel_commands.py  chat_command.py  fixpy_command.py  limit_commands.py  talk_command.py
src/aichan/utils/: decorators.py  logger.py  model_params_store.py  scheduler.py
