[project]
name = "aichan"
version = "0.1.0"
description = "AI-powered Discord bot"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.49.0",
    "discord>=2.3.2",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "lxml>=5.3.1",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "types-pytz>=2025.1.0.20250318",
    "types-pyyaml>=6.0.12.20241230",
]
